[tool.poetry]
name = "defi-automation"
version = "0.1.0"
description = "Automate farming, swapping, and staking of DeFi assets. Self Custodial."
authors = ["Scott Nixon <citadelgrad@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flashbots = "^0.4.3"
cement = "^3.0.4"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
ptipython = "^1.0.1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
