[options]
include_package_data = true

[tool.poetry.scripts]
cmdo = "crypto_commando.main:main"
defi = "crypto_commando.main:main"
schedule = "crypto_commando.daemon.service:main"

[tool.poetry]
name = "crypto_commando"
version = "0.1.0"
description = "Automate farming, swapping, and staking of DeFi assets. Self Custodial."
authors = ["Scott Nixon <citadelgrad@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
flashbots = "^0.4.3"
pyfiglet = "^0.8.post1"
prompt-toolkit = "^3.0.19"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
ptipython = "^1.0.1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = 6.0
# addopts = "-ra -s --cov-report term-missing --cov=crypto_commando tests/"
addopts = "-ra -s"
testpaths = ["tests"]

[tool.isort]
profile = "black"
include_trailing_comma = true
line_length = 88
multi_line_output = 3

[tool.black]
line_length = 88